chore(site): fix aside and max width on small breakpoints

--- a/packages/esl-website/src/common/containers.less
+++ b/packages/esl-website/src/common/containers.less
@@ -3,6 +3,7 @@
 .container,
 .container-fluid {
   width: 100%;
+  max-width: 100vw;
   margin-right: auto;
   margin-left: auto;
   padding-right: 20px;
